complited phone section and fixed overflowing

--- a/FrontEnd/styles/cardsInCatalog.css
+++ b/FrontEnd/styles/cardsInCatalog.css
@@ -1,7 +1,7 @@
 .cards-section {
     max-width: 75vw; /* Для обмеження ширини секції */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     padding: 20px;
     margin: auto;
