--- a/FrontEnd/styles/common.css
+++ b/FrontEnd/styles/common.css
@@ -6,6 +6,11 @@
     line-height: 143%;
 }
 
+main {
+    margin: 0;
+    padding: 0;
+}
+
 ::-webkit-scrollbar {
     width: 0;
 }
@@ -54,7 +59,7 @@ button {
     border: 0;
     border-radius: 8px;
     font-size: 18px;
-    cursor:pointer;
+    cursor: pointer;
     outline: none;
     transition: 0.3s;
 }
@@ -67,11 +72,18 @@ button:hover {
 
 .CloudImg {
     position: absolute;
-    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    margin-top: -0.2em;
     z-index: -1;
     background-repeat: no-repeat;
+}
+
+.upCloud_img {
+    margin-top: -0.2em;
+    top: 0;
+}
+
+.downCloud_img {
+    bottom: 0px;
 }
